welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:3: error: ';' expected but ')' found.
  				(!isAsleep && isMom) && isMorning))
                                                                 ^